# rs-statemachine

./: Cargo.toml  LICENSE  README.md  READ_ME.md
examples/: order_example.rs  traffic_light_example.rs
src/: lib.rs
