[package]
name = "rs-statemachine"
version = "0.1.0"
edition = "2021"
authors = ["Defned <8519834+Fengxq2014@users.noreply.github.com>"]
description = "A Rust implementation of COLA-style state machine with fluent API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Fengxq2014/rs-statemachine"
keywords = ["state-machine", "fsm", "workflow", "dsl"]
categories = ["data-structures", "algorithms"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]


[features]
default = ["history", "extended", "metrics"]
full = ["history", "extended", "metrics", "hierarchical", "guards", "timeout", "parallel", "visualization", "serde", "async"]

history = []
extended = []
metrics = []
hierarchical = []
guards = []
timeout = []
parallel = []
visualization = []

# Optional features
serde = ["dep:serde", "dep:serde_json"]
async = ["dep:tokio", "dep:async-trait"]

[[example]]
name = "traffic_light_example"
path = "examples/traffic_light_example.rs"

[[example]]
name = "order_example"
path = "examples/order_example.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3